@startuml
title Lab07B_OOPTTT - Tic Tac Toe

class TicTacToeRunner {
  + main(args: String[]) : void
}

class GameFrame {
  - tiles : TTTTileButton[][]
  - ROWS : int
  - COLS : int
  - game : Game
  + GameFrame()
  - getJPanel() : JPanel
  - updateTileUI(r: int, c: int) : void
  - resetBoardUI() : void
  - promptPlayAgain() : void
}

class Game {
  - board : Board
  - currentPlayer : Player
  - moveCount : int
  + Game()
  + makeMove(row: int, col: int) : MoveResult
  + reset() : void
  + getCurrentPlayer() : Player
  + getBoard() : Board
  + getMoveCount() : int
}

class Board {
  + ROWS : int = 3
  + COLS : int = 3
  - grid : String[][]
  + Board()
  + clear() : void
  + isValidMove(r: int, c: int) : boolean
  + setCell(r: int, c: int, player: String) : void
  + getCell(r: int, c: int) : String
  + isWin(player: String) : boolean
  + isTie() : boolean
}

class Player {
  + other() : Player
  + toString() : String
}

class TTTTileButton {
  - row : int
  - col : int
  + TTTTileButton(row: int, col: int)
  + getRow() : int
  + getCol() : int
}

TicTacToeRunner --> GameFrame
GameFrame --> Game
Game --> Board
Game --> Player
GameFrame --> TTTTileButton

@enduml